chore: migrate project to Vite + Tailwind

--- a/Web/index.html
+++ b/Web/index.html
@@ -10,9 +10,6 @@
   <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@600,700&display=swap">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <link rel="stylesheet" href="./assets/css/output.css">
-
 </head>
 
 <body>
@@ -713,7 +710,9 @@
   </div>
 
   <script src="https://unpkg.com/lucide@latest"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/index.js"></script>
+  <script type="module" src="/assets/js/main.js"></script>
+
 </body>
 
 </html>
