--- a/Web/index.html
+++ b/Web/index.html
@@ -629,30 +629,15 @@
         <div class="max-w-7xl mx-auto">
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-20 lg:gap-32 items-center">
             <div class="order-2 lg:order-1">
-              <h2 class="text-4xl md:text-5xl  font-extrabold text-brand-dark mb-8 leading-[1.05]">Envie d'une page qui
-                vous apporte <span class="text-brand-dark border-b-[6px] border-brand-orange/30">des contacts ?</span>
-              </h2>
-              <p class="text-gray-600 mb-12 text-xl md:text-2xl leading-relaxed">Discutons de votre projet. C'est sans
-                engagement, juste une opportunité de voir comment simplifier votre présence en ligne.</p>
-              <div class="flex items-center gap-6">
-                <div class="flex -space-x-5">
-                  <div class="w-16 h-16 rounded-full border-4 border-brand-cream overflow-hidden bg-gray-200"><img
-                      src="https://picsum.photos/seed/user1/200/200" alt="User" class="w-full h-full object-cover" />
-                  </div>
-                  <div class="w-16 h-16 rounded-full border-4 border-brand-cream overflow-hidden bg-gray-200"><img
-                      src="https://picsum.photos/seed/user2/200/200" alt="User" class="w-full h-full object-cover" />
-                  </div>
-                  <div class="w-16 h-16 rounded-full border-4 border-brand-cream overflow-hidden bg-gray-200"><img
-                      src="https://picsum.photos/seed/user3/200/200" alt="User" class="w-full h-full object-cover" />
-                  </div>
-                  <div
-                    class="w-16 h-16 rounded-full border-4 border-brand-cream bg-white flex items-center justify-center text-gray-400 text-sm font-bold shadow-sm">
-                    <i data-lucide="plus" style="width:24px;height:24px"></i>
-                  </div>
-                </div>
-                <span class="text-sm font-semibold text-gray-500 max-w-[150px] leading-snug">Rejoignez les indépendants
-                  qui ont choisi la clarté.</span>
-              </div>
+              <h2 class="text-4xl md:text-5xl  font-extrabold text-brand-dark mb-8 leading-[1.05]">Discutons simplement de votre <span
+                  class="text-brand-dark relative inline-block">présence web
+                  <svg class="absolute w-full h-3 -bottom-1 left-0 text-brand-orange opacity-30" viewBox="0 0 100 10"
+                    preserveAspectRatio="none">
+                    <path d="M0 5 Q 50 10 100 5" stroke="currentColor" stroke-width="3" fill="none" />
+                  </svg>
+                </span>.</h2>
+              <p class="text-gray-600 mb-6 text-xl md:text-2xl leading-relaxed">Vous pouvez m’expliquer votre situation, vos doutes ou votre besoin.<br><br>Je vous répondrai honnêtement pour vous dire si Flowpage est pertinent pour vous — ou non.</p>
+              <p class="text-sm text-gray-500 leading-relaxed">Premier échange gratuit.<br>Sans engagement.<br>Sans pression commerciale.</p>
             </div>
             <div
               class="order-1 lg:order-2 bg-white p-10 md:p-14 rounded-[2.5rem] shadow-2xl shadow-brand-orange/5 border border-white">
@@ -679,7 +664,7 @@
                 </div>
                 <button type="button"
                   class="w-full bg-brand-orange text-white font-bold py-5 rounded-xl hover:bg-[#c56045] transition-all transform shadow-md shadow-brand-orange/10 hover:bg-[#c56045] flex items-center justify-center gap-3 text-lg">Envoyer
-                  ma demande <i data-lucide="arrow-right" style="width:20px;height:20px"></i></button>
+                  mon message <i data-lucide="arrow-right" style="width:20px;height:20px"></i></button>
               </form>
             </div>
           </div>
