feat(hero): full-screen hero layout and constat slide-up animation

--- a/Web/index.html
+++ b/Web/index.html
@@ -65,7 +65,7 @@
 
       <main class="flex-grow pt-24">
         <section
-          class="relative pt-24 pb-32 md:pt-32 md:pb-40 px-6 md:px-12 max-w-8xl mx-auto overflow-hidden"
+          class="relative pt-24 pb-32 md:pt-32 md:pb-40 px-6 md:px-12 max-w-8xl mx-auto overflow-hidden min-h-[90vh] flex flex-col justify-center"
           id="hero"
         >
           <div
@@ -183,7 +183,7 @@
         </section>
 
         <section
-          class="bg-brand-dark text-white py-32 md:py-40 px-6 md:px-12 rounded-t-[3rem] md:rounded-t-[5rem] -mt-12 relative z-20"
+          class="bg-brand-dark text-white py-32 md:py-40 px-6 md:px-12 rounded-t-[3rem] md:rounded-t-[5rem] -mt-24 relative z-20 animate-constat-up"
           id="constat"
         >
           <div class="max-w-7xl mx-auto">
